<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="struct_ADS_Felber" Id="{c2d35fc3-1351-48b8-b9fa-6c5091b82030}">
    <Declaration><![CDATA[TYPE struct_ADS_Felber :
STRUCT
	int_liveCount		: INT;	
	
	// prgEM
	lr_RealPower_Grid			: LREAL;				
	lr_ApparentPower_Grid		: LREAL;				
	lr_ReactivePower_Grid		: LREAL;				
	lr_Frequency_Grid			: LREAL;				                                   
	lr_Voltage_L1N				: LREAL;				
	lr_Voltage_L2N				: LREAL;				
	lr_Voltage_L3N				: LREAL;				
	lr_Voltage_L1L2				: LREAL;				
	lr_Voltage_L2L3				: LREAL;				
	lr_Voltage_L3L1				: LREAL;				
 	lr_Current_L1				: LREAL;				
	lr_Current_L2				: LREAL;				
	lr_Current_L3				: LREAL;				
	lrPower_EM1					: LREAL;					
	lrPower_EM2					: LREAL;					
	lrPower_EM3					: LREAL;					
	lrPower_EM4					: LREAL;					
	lrPower_EM5					: LREAL;					
	lrPower_EM6					: LREAL;					
	lrPower_House				: LREAL;					
	lr_EnergyCounter_Grid		: LREAL;					
	lr_EnergyCounter_EM1		: LREAL;					
	lr_EnergyCounter_EM2		: LREAL;					
	lr_EnergyCounter_EM3		: LREAL;					
	lr_EnergyCounter_EM4		: LREAL;					
	lr_EnergyCounter_EM5		: LREAL;					
	lr_EnergyCounter_EM6		: LREAL;					
	lr_EnergyCounter_House		: LREAL;		

	// prgEMS
	b_Manual_On_CH1				: BOOL;						
	b_Manual_Off_CH1			: BOOL;						
	b_Manual_On_CH2				: BOOL;						
	b_Manual_Off_CH2			: BOOL;						
	b_Manual_On_CH3				: BOOL;						
	b_Manual_Off_CH3			: BOOL;						
	b_Manual_On_CH4				: BOOL;						
	b_Manual_Off_CH4			: BOOL;						
	b_Manual_On_CH5				: BOOL;						
	b_Manual_Off_CH5			: BOOL;						
	b_Manual_On_Coffee_CH6		: BOOL;				
	b_Manual_Off_Coffee_CH6		: BOOL;				
	b_Manual_On_Vent_CH7		: BOOL;				
	b_Manual_Off_Vent_CH7		: BOOL;			
	b_LoadOn_CH1				: BOOL;		
	b_LoadOn_CH2				: BOOL;			
	b_LoadOn_CH3				: BOOL;			
	b_LoadOn_CH4				: BOOL;			
	b_LoadOn_CH5				: BOOL;			
	b_LoadOn_CH6				: BOOL;			
	b_LoadOn_CH7				: BOOL;		
	byte_MoFr_Open_Hour			: BYTE;					
	byte_MoFr_Open_Minute		: BYTE;					
	byte_MoFr_Close_Hour		: BYTE;					
	byte_MoFr_Close_Minute		: BYTE;					
	byte_Sa_Open_Hour			: BYTE;					
	byte_Sa_Open_Minute			: BYTE;					
	byte_Sa_Close_Hour			: BYTE;					
	byte_Sa_Close_Minute		: BYTE;					
	byte_So_Open_Hour			: BYTE;					
	byte_So_Open_Minute			: BYTE;					
	byte_So_Close_Hour			: BYTE;					
	byte_So_Close_Minute		: BYTE;					
// offset CH1 in hours			                    
	b_Enable_Control_CH1		: BOOL;				
	real_Offset_Start_CH1		: REAL;				
	real_Offset_Stop_CH1		: REAL;				
// offset CH2 in hours			                    
	b_Enable_Control_CH2		: BOOL;				
	real_Offset_Start_CH2		: REAL;				
	real_Offset_Stop_CH2		: REAL;				
// offset CH3 in hours			                    
	b_Enable_Control_CH3		: BOOL;				
	real_Offset_Start_CH3		: REAL;				
	real_Offset_Stop_CH3		: REAL;				
// offset CH4 in hours			                    
	b_Enable_Control_CH4		: BOOL;				
	real_Offset_Start_CH4		: REAL;				
	real_Offset_Stop_CH4		: REAL;				
// offset CH5 in hours			                    
	b_Enable_Control_CH5		: BOOL;				
	real_Offset_Start_CH5		: REAL;				
	real_Offset_Stop_CH5		: REAL;				
// offset CH6 in hours			                    
	b_Enable_Control_Coffee_CH6	: BOOL;				
	real_Offset_Start_Coffee_CH6: REAL;				
	real_Offset_Stop_Coffee_CH6	: REAL;				
// offset CH7 in hours			                    
	b_Enable_Control_Vent_CH7	: BOOL;				
	real_Offset_Start_CH7		: REAL;				
	real_Offset_Stop_CH7		: REAL;				


                                  
			(*: REAL;			                        
			: REAL;                                     
			: REAL;			
			: REAL;			
			: REAL;
			: REAL;			
			: REAL;
			: REAL;			
*)

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>